# MysteryOS

./: .gitignore  CMakeLists.txt  README.md  build.sh  shell.html
.github/workflows/: pages.yml
data/: MapleTree.mtl  breathing-idle.glb  chair.gltf  desk-comp.gltf  filesystem.json  grass.mtl  license.txt  light.gltf  puzzles.json  right-turn.glb  sitting-idle.glb  skeleton.gltf  stand-up.glb  walking.glb
docs/: index.html  mysteryos.js  mysteryos.wasm  shell.html
docs/data/: filesystem.json  puzzles.json
src/: main.cpp
src/apps/: file_explorer.cpp  file_explorer.h  image_viewer.cpp  image_viewer.h  password_dialog.cpp  password_dialog.h  terminal.cpp  terminal.h  text_editor.cpp  text_editor.h
src/fx/: glitch.cpp  glitch.h  scare_director.cpp  scare_director.h
src/kernel/: app.h  kernel.cpp  kernel.h  puzzle.cpp  puzzle.h  vfs.cpp  vfs.h
tests/: test_main.cpp
